changed copyright 	modified:   src/jsboard.js 	modified:   tests/editor.html

--- a/tests/editor.html
+++ b/tests/editor.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>editor test</sample>
+<!--
+  Copyright 2009 Noriyuki Hosaka bgnori@gmail.com
+  -->
 </head>
 <body>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
