removed id. 	modified:   tests/editor.html

--- a/tests/editor.html
+++ b/tests/editor.html
@@ -16,7 +16,7 @@ google.load("jquery", "1.3.2");
 <script>
 </script>
 
-<div class="jsboard" id="initial">initial position</div>
+<div class="jsboard" ">initial position</div>
 <div class="jsboard" alt="4PPgAQPgc+QBIg:cAl7AAAAAAAA">another position</div>
 <div class="jsboard" alt="4PPgAQPgc+QBIg:cAl7AAAAAAAA" width="400" height="300">yet another position with size</div>
 </body>
