changed for listing test entry point. 	modified:   tests/editor.html

--- a/tests/editor.html
+++ b/tests/editor.html
@@ -1,23 +1,14 @@
 <html>
 <head>
-<title>editor test</sample>
+<title>editor tests</sample>
 <!--
   Copyright 2009 Noriyuki Hosaka bgnori@gmail.com
   -->
 </head>
 <body>
-<script type="text/javascript" src="http://www.google.com/jsapi"></script>
-<script>
-google.load("jquery", "1.3.2");
-</script>
-<script type="text/javascript" src="../src/jsboard.js">
-</script>
-
-<script>
-</script>
-
-<div class="jsboard" ">initial position</div>
-<div class="jsboard" alt="4PPgAQPgc+QBIg:cAl7AAAAAAAA">another position</div>
-<div class="jsboard" alt="4PPgAQPgc+QBIg:cAl7AAAAAAAA" width="400" height="300">yet another position with size</div>
+<ul>
+<li><a href="./initial.html"> initial positions </a></li>
+<li><a href="./somepositions.html"> some other positions </a></li>
+</ul>
 </body>
 </html>
