added more test cases 	modified:   tests/somepositions.html

--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -34,6 +34,34 @@ Match ID: cAl7AAAAAAAA
 </div>
 </div>
 
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: 2LYpAQzY3RoAMA
+Match ID: cAkuAAAAAAAA
+</div>
+</div>
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: sGfwgAPbuIEDIA
+Match ID: cIkqAAAAAAAA
+</div>
+</div>
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: sGfwgAPbuIEDIA
+Match ID: cIkqAAAAAAAA
+    1. Cubeful 2-ply    24/22 13/9                   Eq.:  -0.151
+       0.425 0.125 0.005 - 0.575 0.192 0.009
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    8/4 6/4                      Eq.:  -0.208 ( -0.057)
+       0.396 0.133 0.006 - 0.604 0.204 0.015
+        2-ply cubeful prune [world class]
+</div>
+</div>
+
+
 </body>
 </html>
 
