implemented some Parsing for move listing. 	modified:   src/jsboard.js 	modified:   tests/somepositions.html

--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -36,8 +36,7 @@ Match ID: cAl7AAAAAAAA
 
 <div>Script understands Copy and Paste from gnubg
 <div class="jsboard" width="400" height="300">
-Position ID: 2LYpAQzY3RoAMA
-Match ID: cAkuAAAAAAAA
+Position ID: 2LYpAQzY3RoAMA Match ID: cAkuAAAAAAAA
 </div>
 </div>
 
@@ -62,6 +61,125 @@ Match ID: cIkqAAAAAAAA
 </div>
 
 
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: bbcLACC02zYEAA
+Match ID: QQm2AZAASAAA
+    1. Rollout          13/8 5/1*                    Eq.:  +0.8791
+       0.8922 0.0812 0.0043 - 0.1078 0.0096 0.0009 CL  +0.9252 CF  +0.8791
+      [0.0054 0.0055 0.0014 - 0.0054 0.0042 0.0007 CL   0.0148 CF   0.0166]
+        Full cubeful rollout with var.redn.
+        150 games, Mersenne Twister dice gen. with seed 717406193 and quasi-random dice
+        Play: world class 2-ply cubeful prune [world class]
+        keep the first 0 0-ply moves and up to 8 more moves within equity 0.16
+        Skip pruning for 1-ply moves.
+        Cube: 2-ply cubeful prune [world class]
+    2. Rollout          13/4                         Eq.:  +0.8026 ( -0.0765)
+       0.8893 0.0431 0.0012 - 0.1107 0.0072 0.0003 CL  +0.8472 CF  +0.8026
+      [0.0035 0.0039 0.0008 - 0.0035 0.0012 0.0003 CL   0.0110 CF   0.0130]
+        Full cubeful rollout with var.redn.
+        146 games, Mersenne Twister dice gen. with seed 717406193 and quasi-random dice
+        Play: world class 2-ply cubeful prune [world class]
+        keep the first 0 0-ply moves and up to 8 more moves within equity 0.16
+        Skip pruning for 1-ply moves.
+        Cube: 2-ply cubeful prune [world class]
+</div>
+</div>
+
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: /1sBAADz3gAAAA
+Match ID: cIk0AAAAAAAA
+    1. Cubeful 2-ply    5/off 4/3                    Eq.:  -0.5189
+       0.2405 0.0000 0.0000 - 0.7595 0.0000 0.0000
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    5/off 2/1                    Eq.:  -0.5419 ( -0.0230)
+       0.2290 0.0000 0.0000 - 0.7710 0.0000 0.0000
+        2-ply cubeful prune [world class]
+    3. Cubeful 2-ply    5/4 5/off                    Eq.:  -0.5722 ( -0.0533)
+       0.2139 0.0000 0.0000 - 0.7861 0.0000 0.0000
+        2-ply cubeful prune [world class]
+    4. Cubeful 2-ply    6/off                        Eq.:  -0.5739 ( -0.0550)
+       0.2131 0.0000 0.0000 - 0.7869 0.0000 0.0000
+        2-ply cubeful prune [world class]
+</div>
+</div>
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: bJvBASKwa3ACWA
+Match ID: cAklAAAAAAAA
+    1. Cubeful 2-ply    bar/23 24/23                 Eq.:  -0.3680
+       0.3160 0.0519 0.0012 - 0.6840 0.4339 0.0713
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    bar/23 6/5                   Eq.:  -0.3960 ( -0.0280)
+       0.3020 0.0472 0.0012 - 0.6980 0.4497 0.1047
+        2-ply cubeful prune [world class]
+    3. Cubeful 2-ply    bar/23 15/14                 Eq.:  -0.3968 ( -0.0288)
+       0.3016 0.0437 0.0012 - 0.6984 0.4575 0.1066
+        2-ply cubeful prune [world class]
+    4. Cubeful 2-ply    bar/23 7/6                   Eq.:  -0.4083 ( -0.0403)
+       0.2958 0.0585 0.0018 - 0.7042 0.3791 0.0618
+        2-ply cubeful prune [world class]
+    5. Cubeful 2-ply    bar/23 8/7                   Eq.:  -0.4092 ( -0.0412)
+       0.2954 0.0451 0.0013 - 0.7046 0.4585 0.1047
+        2-ply cubeful prune [world class]
+    6. Cubeful 2-ply    bar/24 6/4*                  Eq.:  -0.4116 ( -0.0436)
+       0.2942 0.0454 0.0013 - 0.7058 0.4726 0.1304
+        2-ply cubeful prune [world class]
+</div>
+</div>
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: uz6DgACz28AGAA
+Match ID: cIk0AAAAAAAA
+    1. Cubeful 2-ply    12/7*/6                      Eq.:  +0.7045
+       0.8523 0.0760 0.0006 - 0.1477 0.0145 0.0005
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    13/7*                        Eq.:  +0.6805 ( -0.0240)
+       0.8403 0.0839 0.0010 - 0.1597 0.0225 0.0008
+        2-ply cubeful prune [world class]
+    3. Cubeful 2-ply    12/11 12/7*                  Eq.:  +0.6761 ( -0.0284)
+       0.8380 0.0835 0.0010 - 0.1620 0.0200 0.0006
+        2-ply cubeful prune [world class]
+    4. Cubeful 2-ply    12/7* 4/3                    Eq.:  +0.6705 ( -0.0340)
+       0.8353 0.0797 0.0009 - 0.1647 0.0238 0.0009
+        2-ply cubeful prune [world class]
+    5. Cubeful 0-ply    12/7* 6/5                    Eq.:  +0.2524 ( -0.4521)
+       0.6262 0.0792 0.0008 - 0.3738 0.1242 0.0047
+        0-ply cubeful prune [expert]
+    6. Cubeful 0-ply    12/7* 5/4                    Eq.:  +0.1768 ( -0.5278)
+       0.5884 0.0646 0.0008 - 0.4116 0.1176 0.0047
+        0-ply cubeful prune [expert]
+    7. Cubeful 0-ply    12/7* 3/2                    Eq.:  +0.1324 ( -0.5721)
+       0.5662 0.0943 0.0012 - 0.4338 0.2065 0.0126
+        0-ply cubeful prune [expert]
+</div>
+</div>
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard" width="400" height="300">
+Position ID: mLuJAEPb9AQDEA
+Match ID: cIktAAAAAAAA
+    1. Cubeful 2-ply    23/20 13/7 8/5               Eq.:  +0.6059
+       0.8029 0.6341 0.0177 - 0.1971 0.0279 0.0007
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    23/20 13/10(2) 8/5           Eq.:  +0.5812 ( -0.0247)
+       0.7906 0.5655 0.0134 - 0.2094 0.0193 0.0002
+        2-ply cubeful prune [world class]
+    3. Cubeful 2-ply    23/20 8/5 6/3(2)             Eq.:  +0.5685 ( -0.0374)
+       0.7843 0.6128 0.0202 - 0.2157 0.0328 0.0007
+        2-ply cubeful prune [world class]
+    4. Cubeful 2-ply    23/20 13/10 8/5 6/3          Eq.:  +0.5558 ( -0.0501)
+       0.7779 0.6096 0.0182 - 0.2221 0.0356 0.0010
+        2-ply cubeful prune [world class]
+</div>
+</div>
+
 </body>
 </html>
+
 
