introduced css. 	modified:   src/jsboard.js 	new file:   tests/default.css 	modified:   tests/movelistparsing.html

--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -13,6 +13,9 @@ google.load("jquery", "1.3.2");
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
 
+<link rel=stylesheet type="text/css" href="default.css" />
+
+
 
 <div>Script understands Copy and Paste from gnubg
 <div class="jsboard" width="400" height="300">
