--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -18,7 +18,7 @@ google.load("jquery", "1.3.2");
 
 
 <div>Script understands Copy and Paste from gnubg
-<div class="jsboard" width="400" height="300">
+<div class="jsboard">
 Position ID: sGfwgAPbuIEDIA
 Match ID: cIkqAAAAAAAA
     1. Cubeful 2-ply    24/22 13/9                   Eq.:  -0.151
@@ -77,7 +77,7 @@ Match ID: cIk0AAAAAAAA
 </div>
 
 <div>Script understands Copy and Paste from gnubg
-<div class="jsboard" width="400" height="300">
+<div class="jsboard">
 Position ID: bJvBASKwa3ACWA
 Match ID: cAklAAAAAAAA
     1. Cubeful 2-ply    bar/23 24/23                 Eq.:  -0.3680
@@ -102,7 +102,7 @@ Match ID: cAklAAAAAAAA
 </div>
 
 <div>Script understands Copy and Paste from gnubg
-<div class="jsboard" width="400" height="300">
+<div class="jsboard">
 Position ID: uz6DgACz28AGAA
 Match ID: cIk0AAAAAAAA
     1. Cubeful 2-ply    12/7*/6                      Eq.:  +0.7045
@@ -130,7 +130,7 @@ Match ID: cIk0AAAAAAAA
 </div>
 
 <div>Script understands Copy and Paste from gnubg
-<div class="jsboard" width="400" height="300">
+<div class="jsboard">
 Position ID: mLuJAEPb9AQDEA
 Match ID: cIktAAAAAAAA
     1. Cubeful 2-ply    23/20 13/7 8/5               Eq.:  +0.6059
