moved width / height to default.css 	modified:   tests/movelistparsing.html

--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -32,7 +32,7 @@ Match ID: cIkqAAAAAAAA
 
 
 <div>Script understands Copy and Paste from gnubg
-<div class="jsboard" width="400" height="300">
+<div class="jsboard">
 Position ID: bbcLACC02zYEAA
 Match ID: QQm2AZAASAAA
     1. Rollout          13/8 5/1*                    Eq.:  +0.8791
@@ -58,7 +58,7 @@ Match ID: QQm2AZAASAAA
 
 
 <div>Script understands Copy and Paste from gnubg
-<div class="jsboard" width="400" height="300">
+<div class="jsboard">
 Position ID: /1sBAADz3gAAAA
 Match ID: cIk0AAAAAAAA
     1. Cubeful 2-ply    5/off 4/3                    Eq.:  -0.5189
