added test cases such as 4/3*(2) 	modified:   tests/movelistparsing.html

--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -148,6 +148,51 @@ Match ID: cIktAAAAAAAA
 </div>
 </div>
 
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard">
+Position ID: mOfgASTYzsEAJg
+Match ID: cIkkAAAAAAAA
+    1. Cubeful 2-ply    8/7(2) 4/3*(2)               Eq.:  +0.195
+       0.597 0.247 0.009 - 0.403 0.112 0.004
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    24/23 8/7(3)                 Eq.:  +0.166 ( -0.028)
+       0.583 0.203 0.007 - 0.417 0.112 0.004
+        2-ply cubeful prune [world class]
+    3. Cubeful 2-ply    24/23 6/3*                   Eq.:  +0.162 ( -0.033)
+       0.581 0.223 0.010 - 0.419 0.128 0.006
+        2-ply cubeful prune [world class]
+    4. Cubeful 2-ply    8/7(3) 6/5                   Eq.:  +0.162 ( -0.033)
+       0.581 0.207 0.006 - 0.419 0.111 0.004
+        2-ply cubeful prune [world class]
+    5. Cubeful 2-ply    8/6 8/7(2)                   Eq.:  +0.156 ( -0.038)
+       0.578 0.211 0.007 - 0.422 0.111 0.004
+        2-ply cubeful prune [world class]
+    6. Cubeful 2-ply    8/6 4/3*(2)                  Eq.:  +0.148 ( -0.047)
+       0.574 0.237 0.009 - 0.426 0.115 0.004
+        2-ply cubeful prune [world class]
+    7. Cubeful 2-ply    24/23 8/7 4/3*(2)            Eq.:  +0.137 ( -0.058)
+       0.569 0.232 0.010 - 0.431 0.129 0.006
+        2-ply cubeful prune [world class]
+    8. Cubeful 2-ply    8/7 6/3*                     Eq.:  +0.136 ( -0.059)
+       0.568 0.219 0.009 - 0.432 0.151 0.009
+        2-ply cubeful prune [world class]
+</div>
+</div>
+
+<div>Script understands Copy and Paste from gnubg
+<div class="jsboard">
+Position ID: ZwAAwGwAAAAAAA
+Match ID: cIkkAAAAAAAA
+
+    1. Cubeful 2-ply    3/off 1/off                  Eq.:  -0.115
+       0.442 0.000 0.000 - 0.558 0.000 0.000
+        2-ply cubeful prune [world class]
+    2. Cubeful 2-ply    4/2 1/off(2)                 Eq.:  -0.197 ( -0.081)
+       0.402 0.000 0.000 - 0.598 0.000 0.000
+        2-ply cubeful prune [world class]
+</div>
+</div>
+
 
 </body>
 </html>
