fixed wrong testing data 	modified:   tests/movelistparsing.html

--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -19,8 +19,8 @@ google.load("jquery", "1.3.2");
 
 <div>Script understands Copy and Paste from gnubg
 <div class="jsboard">
-Position ID: sGfwgAPbuIEDIA
-Match ID: cIkqAAAAAAAA
+Position ID: sGfwgAPbOIMDIA
+Match ID: cAkxAAAAAAAA
     1. Cubeful 2-ply    24/22 13/9                   Eq.:  -0.151
        0.425 0.125 0.005 - 0.575 0.192 0.009
         2-ply cubeful prune [world class]
