followed up css path change. 	modified:   tests/initial.html 	modified:   tests/movelistparsing.html 	modified:   tests/somepositions.html

--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -20,7 +20,7 @@ jsboard = {
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
 
-<link rel=stylesheet type="text/css" href="default.css" />
+<link rel=stylesheet type="text/css" href="../assets/default.css" />
 
 
 
