--- a/tests/initial.html
+++ b/tests/initial.html
@@ -13,7 +13,7 @@ google.load("jquery", "1.3.2");
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
 
-<link rel=stylesheet type="text/css" href="default.css" />
+<link rel=stylesheet type="text/css" href="../assets/default.css" />
 
 <div> This shows initial position
 <div class="jsboard"></div>
