--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -13,7 +13,7 @@ google.load("jquery", "1.3.2");
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
 
-<link rel=stylesheet type="text/css" href="default.css" />
+<link rel=stylesheet type="text/css" href="../assets/default.css" />
 
 <div>
 this shows position of 4PPgAQPgc+QBIg:cAl7AAAAAAAA
