--- a/study/BayeuxProtocol/translated/EventMessageDefinitions.html
+++ b/study/BayeuxProtocol/translated/EventMessageDefinitions.html
@@ -4,24 +4,39 @@
     a Bayeux server and are delivered in event messages sent from a Bayeux server to a Bayeux client.
 </p>
 
-<h2 class="clause">5.1. Publish</h2>
+<p>
+    Application eventは、event messageを用いてクライアントからサーバに向かってに発行され、また、同様にサーバからクライアントに配送される。
+</p>
 
-<h3 class="clause">5.1.1. Publish Request</h3>
+
+<h2 class="clause">5.1. 発行(Publish)</h2>
+
+<h3 class="clause">5.1.1. 発行要求(Publish Request)</h3>
 
 <p>
     A Bayeux client can publish events on a channel by sending event messages.
     An event message MAY be sent in new HTTP request or it MAY be sent in the same HTTP request as
     any message other than a handshake meta message.
 </p>
+<p>
+  クライアントはevent messageをチャンネルを通じて送ることでeventを発行することができる。
+  イベントメッセージはあらたなHTTP requestを用いて送ることもできるし、ハンドシェークメタメッセージとして送ることもできる。
+</p>
 
 <p>
     A publish message MAY be sent from an unconnected client (that has not performed handshaking and thus does
     not have a client ID). It is OPTIONAL for a server to accept unconnected publish requests and they
     should apply server specific authentication and authorization before doing so.
+    発行メッセージは非接続のクライアント(つまりそのクライアントはまだハンドシェークを行っていないためにクライアントIDを持っていない)
+    からも送ることができる。サーバはそのような発行要求を受けつけるのか、はたまた認証をその前に行うのかはオプションである。
+
 </p>
 
 <p>
     A publish event message MUST contain the message fields:
+</p>
+<p>
+  発行イベントメッセージは、次のメッセージフィールドを含んでいなければならない。
 </p>
 <dl>
     <dt>channel</dt>
@@ -32,6 +47,9 @@
 <p>
     A publish event message MAY contain the message fields:
 </p>
+<p>
+  発行イベントメッセージは、次のメッセージフィールドを含んでいてもよい。
+</p>
 <dl>
     <dt>clientId</dt>
     <dd>The client ID returned in the handshake response</dd>
@@ -40,6 +58,7 @@
     <dt>ext</dt>
 </dl>
 <p>An example event message is:</p>
+<p>イベントメッセージの例</p>
 <pre class="example">
 [
   {
@@ -52,13 +71,20 @@
 </pre>
 
 
-<h3 class="clause">5.1.2. Publish Response</h3>
+<h3 class="clause">5.1.2. 発行応答(Publish Response)</h3>
 
 <p>
     A Bayeux server MAY respond to a publish event message with a publish event acknowlegement.
 </p>
 <p>
+    サーバは発行イベントメッセージに対して、発行イベント了解を返してもよい。
+</p>
+<p>
     A publish event message MUST contain the message fields:
+</p>
+<p>
+  発行イベントメッセージは次のメッセージフィールドを含まなければならない。
+  訳注: 発行レスポンス了解のことか？
 </p>
 <dl>
     <dt>channel</dt>
@@ -66,12 +92,16 @@
     <dd>boolean indicating the success or otherwise of the publish</dd>
 </dl>
 <p>A publish event response MAY contain the message fields:</p>
+<p>
+  発行イベントメッセージは次のメッセージフィールドを含んでもよい。
+</p>
 <dl>
     <dt>id</dt>
     <dt>error</dt>
     <dt>ext</dt>
 </dl>
 <p>An example event reponse message is:</p>
+<p> 例: </p>
 <pre class="example">
 [
   {
@@ -82,7 +112,7 @@
 ]
 </pre>
 
-<h2 class="clause">5.2. Delivery of event messages</h2>
+<h2 class="clause">5.2. イベントメッセージの配送 Delivery of event messages</h2>
 
 <p>
     Event messages MUST be delivered to clients if the client is subscribed to the channel of the event message.
@@ -94,7 +124,26 @@
 </p>
 
 <p>
+  イベントメッセージは、そのイベントメッセージのチャネルを購読しているクライアントに配送されなければならない。
+  イベントメッセージは、メタハンドシェイクレスポンスと同じHTTP respnseで配送されてもよい。
+  
+  サーバが複数のHTTP requestを同一クライアントから受け取った場合、サーバはすべての利用可能なメッセージを1つのHTTP
+  responseで返さなければならない。メタメッセージ要求
+
+    If a Bayeux server has multiple HTTP requests from the same client, the server SHOULD deliver all available messages
+    in the HTTP response that will be sent immediately in preference to waking a waiting connect meta message request.<br/>
+訳注：理解不能。
+
+    Event message delivery MAY not acknowledged by the client.
+イベントメッセージ配送に関してクライアントから了解が返るとは限らない。
+
+</p>
+
+<p>
     A deliver event message MUST contain the message fields:
+</p>
+<p>
+    配送イベントメッセージは次のメッセージフィールドを含まなければならない。
 </p>
 <dl>
     <dt>channel</dt>
@@ -102,6 +151,9 @@
     <dd>The message as an arbitrary JSON encoded object</dd>
 </dl>
 <p>A deliver event response MAY contain the message fields:</p>
+<p>
+    配送イベントメッセージは次のメッセージフィールドを含んでもよい。
+</p>
 <dl>
     <dt>id</dt>
     <dd>Unique message ID from the publisher</dd>
@@ -111,6 +163,7 @@
     <dt>advice</dt>
 </dl>
 <p>An example event deliver message is:</p>
+<p> 例:</p>
 <pre class="example">
 [
   {
@@ -120,87 +173,4 @@
   }
 ]
 </pre>
-
-
-<h1 class="clause">6. Transports</h1>
-
-<h2 class="clause">6.1. long-polling</h2>
-<p>
-    "Long-polling" is a polling transport that attempts to minimize both latency in server-client message delivery, and the
-    processing/network resources required for the connection. In "traditional" polling, servers send and terminate responses to
-    requests immediately, even when there are no events to deliver, and worst-case latency is the polling delay between each
-    client request.<br/>
-    Long-polling server implementations attempt to hold open each request until there are events to deliver;
-    the goal is to always have a pending request available to use for delivering events as they occur, thereby minimizing
-    the latency in message delivery.<br/>
-    Increased server load and resource starvation are addressed by using the reconnect and
-    interval advice fields to throttle clients, which in the worst-case degenerate to traditional polling behaviour.
-</p>
-
-<h3 class="clause">6.1.1 long-polling request messages</h3>
-<p>
-    Messages SHOULD be sent to the server as the body of an <em>application/json</em>
-    HTTP POST request.<br/>
-    Alternatively, messages MAY be sent to the server as the 'message' parameter of a
-    application/x-www-form-urlencoded encoded POST request.<br/>
-    If sent as form encoded, the Bayeux messages are sent as the "message" parameter in one of
-    the following forms as:
-</p>
-<ul>
-    <li>Single valued and contain a single Bayeux message</li>
-    <li>Single valued and contain an array of Bayeux message</li>
-    <li>Multi valued and contain a several individual Bayeux message</li>
-    <li>Multi valued and contain a several arrays of Bayeux message</li>
-    <li>Multi valued and contain a mix of individual Bayeux messages and arrays of Bayeux message</li>
-</ul>
-
-<h3 class="clause">6.1.2 long-polling response messages</h3>
-
-<p>
-    Messages SHOULD be sent to the client as unencapsulated body content of a
-    HTTP POST response with content type <em>application/json</em>.
-</p>
-<p>
-    A long-polling response message may contain an advice field containing transport-specific
-    fields to indicate the mode of operation of the transport.<br/>
-    For the long-polling transport, the advice field MAY contain the following fields:
-</p>
-<dl>
-    <dt>timeout</dt>
-    <dd>the number of milliseconds the server will hold the long poll request</dd>
-    <dt>interval</dt>
-    <dd>the number of milliseconds the client SHOULD wait before issuing another long poll request</dd>
-</dl>
-
-<h2 class="clause">6.2. callback-polling</h2>
-
-<h3 class="clause">6.2.1 callback-polling request messages</h3>
-
-<p>
-    Messages SHOULD be sent to the server as the 'message' parameter of a url encoded
-    HTTP GET request.
-</p>
-
-<h3 class="clause">6.2.2 callback-polling response messages</h3>
-
-<p>
-    Responses are sent wrapped in a JavaScript callback in order to facilitate delivery.<br/>
-    As specified by the JSON-P pseudo-protocol, the name of the callback to be triggered
-    is passed to the server via the <em>jsonp</em> HTTP GET parameter.<br/>
-    In the absence of such a parameter, the name of the callback defaults to <em>jsonpcallback</em>.<br/>
-    The called function will be passed a JSON encoded array of Bayeux messages.
-</p>
-
-<p>
-    A callback-polling response message may contain an advice field containing transport-specific
-    fields to indicate the mode of operation of the transport.<br/>
-    For the callback-polling transport, the advice field MAY contain the following fields:
-</p>
-<dl>
-    <dt>timeout</dt>
-    <dd>the number of milliseconds the server will hold the long poll request</dd>
-    <dt>interval</dt>
-    <dd>the number of milliseconds the client SHOULD wait before issuing another long poll request</dd>
-</dl>
-
 
