--- a/tests/comet.html
+++ b/tests/comet.html
@@ -11,11 +11,12 @@ google.load("jquery", "1.3.2");
 </script>
 
 <script type="text/javascript">
+
 function update(){
   $.ajax({
-    url: "http://localhost:3165",
+    url: "http://comet.backgammonbase.test:3165",
     dataType : "jsonp",
-    type: "GET",
+    type: "GET", // JSONP is <script> loading, nothing else.
     cache : false,
     data : {},
     timeout: 60*1000,
@@ -33,12 +34,11 @@ $(document).ready(function(){
   $("form").submit(function(){
     d = $('#message').val()
     $.ajax({
-      url:"http://localhost:3124",
-      dataType : "jsonp",
-      //type: "POST",
-      type: "GET",
+      url: "http://comet.backgammonbase.test:8080/publish", //:3124",
+      type: "POST", 
       cache : false,
-      data : {message:d},
+      //contentType: "application/x-www-form-urlencoded",
+      data : {message:d, channel:'hoge'},
       timeout: 60*1000,
       success : function (data, dataType){
         $('#message').val('');
