tempolary commit before adding session. - comet jquery library is on going. - implementing channel 	modified:   etc/httpd/conf.d/vhosts/backgammonbase.test/comet.conf 	modified:   memo.txt 	modified:   src/cometd.py 	modified:   src/jquery.comet.hub.js 	modified:   src/move.py 	modified:   tests/jquery.comet.chat.html

--- a/tests/jquery.comet.chat.html
+++ b/tests/jquery.comet.chat.html
@@ -20,7 +20,11 @@ function debug(msg){
 };
 $(document).ready(function(){
   debug('ready');
-  hub.init("comet.backgammonbase.test", 3165, 8080);
+  hub.init({
+    host:"comet.backgammonbase.test",
+    comet_port: 3165,
+    http_port: 8080//3124
+  });
   $('#target').chatForm('/A');
 });
 
