cleaned up comet/web handler mess up. web handler is now clean WSGI.
	modified:   memo.txt
	new file:   src/app.py
	modified:   src/cometd.py
	modified:   tests/jquery.comet.chat.html

--- a/tests/jquery.comet.chat.html
+++ b/tests/jquery.comet.chat.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>comet chat Plugin test</sample>
+<title>comet chat Plugin test</title>
 <!--
   Copyright 2009 Noriyuki Hosaka bgnori@gmail.com
   -->
