--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -9,6 +9,13 @@
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script>
 google.load("jquery", "1.4.0");
+jsboard = {
+  style: "nature",
+  config : {
+    move_api_url : "http://localhost:8000/",
+    debug: true,
+    },
+};
 </script>
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
