implemented dynamic loading of css. 	modified:   memo.txt 	modified:   src/jsboard.js 	modified:   tests/movelistparsing.html 	modified:   tests/somepositions.html 	modified:   tests/styletest.html

--- a/tests/movelistparsing.html
+++ b/tests/movelistparsing.html
@@ -11,6 +11,7 @@
 google.load("jquery", "1.4.0");
 jsboard = {
   style: "nature",
+  css: "../assets/default.css",
   config : {
     move_api_url : "http://localhost:8000/",
     debug: true,
@@ -20,7 +21,6 @@ jsboard = {
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
 
-<link rel=stylesheet type="text/css" href="../assets/default.css" />
 
 
 
