--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -11,6 +11,7 @@
 google.load("jquery", "1.4.0");
 jsboard = {
   style: "nature",
+  css: "../assets/default.css",
   config : {
     move_api_url : "http://localhost:8000/",
     debug: true,
@@ -19,8 +20,6 @@ jsboard = {
 </script>
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
-
-<link rel=stylesheet type="text/css" href="../assets/default.css" />
 
 <div>
 this shows position of 4PPgAQPgc+QBIg:cAl7AAAAAAAA
