--- a/tests/styletest.html
+++ b/tests/styletest.html
@@ -8,19 +8,17 @@
 <body>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script>
-google.load("jquery", "1.3.2");
+google.load("jquery", "1.4.0");
 jsboard = {
   style: "nature",
+  css: "../assets/default.css",
   config : {
     move_api_url : "http://localhost:8000/",
-    debug: true,
     },
 };
 </script>
 <script type="text/javascript" src="../src/jsboard.js">
 </script>
-
-<link rel=stylesheet type="text/css" href="../assets/default.css" />
 
 
 
@@ -37,9 +35,11 @@ Match ID: cAkxAAAAAAAA
 </div>
 </div>
 
+<!-- this setting will overwrite previous -->
 <script>
 jsboard = {
   style: "flower",
+  css: "../assets/default.css",
   config : {
     move_api_url : "http://localhost:8000/",
     debug: true,
