polished dynamic loading. 	modified:   memo.txt 	modified:   src/jsboard.js 	modified:   tests/movelistparsing.html 	modified:   tests/somepositions.html 	modified:   tests/styletest.html

--- a/tests/styletest.html
+++ b/tests/styletest.html
@@ -11,10 +11,11 @@
 google.load("jquery", "1.4.0");
 jsboard = {
   style: "nature",
-  css: "../assets/default.css",
+  css: "http://assets.backgammonbase.com/default.css",
+  delay: 1,
   config : {
     move_api_url : "http://localhost:8000/",
-    },
+  },
 };
 </script>
 <script type="text/javascript" src="../src/jsboard.js">
@@ -39,7 +40,8 @@ Match ID: cAkxAAAAAAAA
 <script>
 jsboard = {
   style: "flower",
-  css: "../assets/default.css",
+  delay: 1,
+  css: "http://assets.backgammonbase.com/default.css",
   config : {
     move_api_url : "http://localhost:8000/",
     debug: true,
