--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -11,7 +11,8 @@
 google.load("jquery", "1.4.0");
 jsboard = {
   style: "nature",
-  css: "../assets/default.css",
+  delay: 1,
+  css: "http://assets.backgammonbase.com/default.css",
   config : {
     move_api_url : "http://localhost:8000/",
     debug: true,
