--- a/tests/somepositions.html
+++ b/tests/somepositions.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>some positions</sample>
+<title>some positions</title>
 <!--
   Copyright 2009 Noriyuki Hosaka bgnori@gmail.com
   -->
