--- a/tests/jsboard.html
+++ b/tests/jsboard.html
@@ -36,15 +36,17 @@ describe('jsboard', {
     value_of(jsboard.config).should_include('css');
     value_of(jsboard.config).should_include('move_api_url');
 	},
-
+	'jsboard.fnが定義されている。': function() {
+    value_of(jsboard).should_include('fn');
+  },
 	'imageURLはgnubgidとwidthとheightとcssを与えられた時に対応するURLを生成する。': function() {
-    value_of(jsboard).should_include('imageURL');
-    value_of(jsboard.imageURL('gnubgid', 300, 400, 'hoge')).should_be('http://image.backgammonbase.com/image?gnubgid=gnubgid&height=300&width=400&css=hoge&format=png');
+    value_of(jsboard.fn).should_include('imageURL');
+    value_of(jsboard.fn.imageURL('gnubgid', 300, 400, 'hoge')).should_be('http://image.backgammonbase.com/image?gnubgid=gnubgid&height=300&width=400&css=hoge&format=png');
 	},
 
 	'正規表現 基本': function() {
-    value_of(Boolean(jsboard.re)).should_be(true);
-    value_of(jsboard.re.Line).should_be('(?:\\r\\n|\\n|\\r)');
+    value_of(Boolean(jsboard.pattern)).should_be(true);
+    value_of(jsboard.pattern.Line).should_be('(?:\\r\\n|\\n|\\r)');
     value_of(Boolean(jsboard.gnubg.re)).should_be(true);
     value_of(Boolean(jsboard.movelist.re)).should_be(true);
     value_of(Boolean(jsboard.mat.re)).should_be(true);
