modified:   memo.txt 	modified:   src/jsboard.js   new file:   tests/index.html 	deleted:    tests/initial.html 	modified:   tests/jsboard.html

--- a/tests/jsboard.html
+++ b/tests/jsboard.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <title>jsboard.jy JSSpec results</title>
-<link rel="stylesheet" type="text/css" href="../JSSpec/JSSpec.css" />
-<script type="text/javascript" src="../JSSpec/diff_match_patch.js"></script>
-<script type="text/javascript" src="../JSSpec/JSSpec.js"></script>
+<link rel="stylesheet" type="text/css" href="../jslib/JSSpec/JSSpec.css" />
+<script type="text/javascript" src="../jslib/JSSpec/diff_match_patch.js"></script>
+<script type="text/javascript" src="../jslib/JSSpec/JSSpec.js"></script>
 
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript">// <![CDATA[
