--- a/tests/index.html
+++ b/tests/index.html
@@ -4,18 +4,20 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 	<title>QUnit Test Suite</title>
 	<link rel="stylesheet" href="../jslib/qunit/qunit.css" type="text/css" media="screen">
+
 	<script type="text/javascript" src="../jslib/qunit/qunit.js"></script>
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
   <script type="text/javascript">// <![CDATA[
     google.load("jquery", "1.4.0");
   // ]]></script>
 	<script type="text/javascript" src="../jslib/jsdeferred/jsdeferred.jquery.js"></script>
+	<script type="text/javascript" src="../jslib/jQSpec.js"></script>
   <script type="text/javascript">// <![CDATA[
+    Deferred.define();
     test('hello qunit', function(){
       ok(true);
     });
   // ]]></script>
-	<script type="text/javascript" src="../jslib/jQSpec.js"></script>
 	<script type="text/javascript" src="../src/jsboard.js">
   
   </script>
