having tests in multiple files 	modified:   memo.txt 	new file:   tests/bg/config.js 	new file:   tests/bg/cursor/game.js 	new file:   tests/bg/cursor/match.js 	new file:   tests/bg/fn.js 	new file:   tests/bg/gnubg.js 	new file:   tests/bg/mat.js 	new file:   tests/bg/movelist.js 	new file:   tests/bg/re.js 	modified:   tests/index.html 	modified:   tests/jsboard.js

--- a/tests/index.html
+++ b/tests/index.html
@@ -22,6 +22,14 @@
   
   </script>
 	<script type="text/javascript" src="jsboard.js"></script>
+	<script type="text/javascript" src="bg/config.js"></script>
+	<script type="text/javascript" src="bg/fn.js"></script>
+	<script type="text/javascript" src="bg/re.js"></script>
+	<script type="text/javascript" src="bg/gnubg.js"></script>
+	<script type="text/javascript" src="bg/movelist.js"></script>
+	<script type="text/javascript" src="bg/mat.js"></script>
+	<script type="text/javascript" src="bg/cursor/game.js"></script>
+	<script type="text/javascript" src="bg/cursor/match.js"></script>
 
 </head>
 <body>
